Mejoramiento de secciones: Principal, proyectos, experiencias

--- a/index.html
+++ b/index.html
@@ -19,10 +19,35 @@
         </ol>
     </nav>    
     </header>
-    
-    <section>Seccion principal</section>
-    <section>Seccion Portafolio</section>
-    <section>Seccion eventos</section>
+
+    <section>
+        <h1>
+            Hola! Soy Marcos,<br/> <strong> Desarrollador Web e</strong> <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
+        </h1>
+        <img> imagen de portada
+    </section>
+    <section>
+        <h2>Portafolio (Proyectos Destacados)</h2>
+        <article>
+            <h3>Sistema de pánico con ECU911 y UDLA</h3>
+            <h6>Android</h6>
+            <p><small>Fecha: <strong>01/09/2018</strong></small></p>
+            <p><small>Puedes verlo en: <strong>url</strong></small></p>
+            <p>Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compa;ero de tesis Miguel 
+                Baquero (mickey_migue) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
+            </p>
+        </article>
+    </section>
+    <section>
+        <h2>M&aacute;s sobre mi experiencia</h2>
+        <article>
+            <figure>
+                <img/>
+            </figure>
+            <h3>ICAEET 2019</h3>
+            <p>Evento de nuevas tecnolog&iacute;as para un congreso</p>
+        </article>
+    </section>
     <section>Seccion contactos</section>
     <footer>Footer</footer>
 </body>
