.gitignore, atributos a las imagenes, imagenes y favicon

--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+    <meta charset="utf-8">
     <title>Hola soy Marcos Gavela!</title>
+    <!--Inserción de favicon-->
+    <link rel="icon" type="image/png" href="iamges/favicon.png"/>
 </head>
 <body>
     <header>
+        <div>
+            <figure>
+                <img src="images/devlogo.png" alt="logo de la pagina"/>
+            </figure>
+        </div>
     <nav>
         <ol>
             <li>
-                <a>Portafolio</a>
+                <a href="#">Portafolio</a>
             </li>
             <li>
-                <a>Experiencia</a>
+                <a href="#">Experiencia</a>
             </li>
             <li>
-                <a>Trabajemos juntos</a>
+                <a href="#">Trabajemos juntos</a>
             </li>
         </ol>
     </nav>    
@@ -24,7 +32,8 @@
         <h1>
             Hola! Soy Marcos,<br/> <strong> Desarrollador Web e</strong> <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
         </h1>
-        <img> imagen de portada
+        <!--Imagenes que tienen que ve r con la portada-->
+        <img src="images/hero.jpg" alt="imagen de portada" width="500" height="400"/> 
     </section>
     <section>
         <h2>Portafolio (Proyectos Destacados)</h2>
@@ -36,13 +45,15 @@
             <p>Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compa;ero de tesis Miguel 
                 Baquero (mickey_migue) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
             </p>
+            <img src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/>
+            
         </article>
     </section>
     <section>
         <h2>M&aacute;s sobre mi experiencia</h2>
         <article>
             <figure>
-                <img/>
+                <img src="images/conferencia.jpg" width="500"/>
             </figure>
             <h3>ICAEET 2019</h3>
             <p>Evento de nuevas tecnolog&iacute;as para un congreso</p>
