Enlaces internos a la pagina # en menu, enlaces externos en evexperiencia

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <nav>
         <ol>
             <li>
-                <a href="#">Portafolio</a>
+                <a href="#portfolio">Portafolio</a>
             </li>
             <li>
-                <a href="#">Experiencia</a>
+                <a href="#experience">Experiencia</a>
             </li>
             <li>
-                <a href="#">Trabajemos juntos</a>
+                <a href="#contact">Trabajemos juntos</a>
             </li>
         </ol>
     </nav>    
@@ -35,7 +35,7 @@
         <!--Imagenes que tienen que ve r con la portada-->
         <img src="images/hero.jpg" alt="imagen de portada" width="500" height="400"/> 
     </section>
-    <section>
+    <section id="portfolio">
         <h2>Portafolio (Proyectos Destacados)</h2>
         <article>
             <h3>Sistema de pánico con ECU911 y UDLA</h3>
@@ -49,7 +49,7 @@
             
         </article>
     </section>
-    <section>
+    <section id="experience">
         <h2>M&aacute;s sobre mi experiencia</h2>
         <article>
             <figure>
@@ -57,10 +57,10 @@
             </figure>
             <h3>ICAEET 2019</h3>
             <p>Evento de nuevas tecnolog&iacute;as para un congreso</p>
-            <p>Ver Documento</p>
+            <a href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Documento</a>
         </article>
     </section>
-    <section>
+    <section id="contact">
         <form action="/suscripcion/">
             <h3>Creamos algo juntos?</h3>
             <!--<label for="email">Dejame contactarte con mis ideas</label>-->
