--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <title>Hola soy Marcos Gavela!</title>
     <!--Inserción de favicon-->
     <link rel="icon" type="image/png" href="iamges/favicon.png"/>
+    <link rel="stylesheet" href="css/styles.css">
+    <!--<style>
+        header {
+            background: green
+        }
+    </style>-->
 </head>
 <body>
+    <!--Estilos in line-->
+    <!--<header style="color: red; background: blue">-->
     <header>
         <div>
             <figure>
