--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Hola soy Marcos Gavela!</title>
     <!--Inserción de favicon-->
-    <link rel="icon" type="image/png" href="iamges/favicon.png"/>
+    <link rel="icon" type="image/png" href="./iamges/favicon.png"/>
     <link rel="stylesheet" href="css/styles.css">
     <!--<style>
         header {
@@ -18,7 +18,7 @@
     <header>
         <div>
             <figure>
-                <img src="images/devlogo.png" alt="logo de la pagina"/>
+                <img src="./images/devlogo.png" alt="logo de la pagina"/>
             </figure>
         </div>
     <nav>
@@ -64,8 +64,9 @@
                 <img src="images/conferencia.jpg" width="500"/>
             </figure>
             <h3>ICAEET 2019</h3>
-            <p>Evento de nuevas tecnolog&iacute;as para un congreso</p>
-            <a href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Documento</a>
+            <p>Evento de nuevas 1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
+            <a href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Participaci&oacute;n</a><br>
+            <a href="http://icaett.snotracg.org/es/inicio/" target="_blank">Informaci&oacute;n del Evento</a>
         </article>
     </section>
     <section id="contact">
