--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section>
         <h1>
-            Hola! Soy Marcos,<br/> <strong> Desarrollador Web e</strong> <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
+            Hola! Soy Marcos,<br/> <strong> Desarrollador Web</strong> e <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
         </h1>
         <!--Imagenes que tienen que ve r con la portada-->
         <img src="images/hero.jpg" alt="imagen de portada" width="500" height="400"/> 
@@ -51,7 +51,7 @@
             <p><small>Fecha: <strong>01/09/2018</strong></small></p>
             <p><small>Puedes verlo en: <strong>url</strong></small></p>
             <p>Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compa;ero de tesis Miguel 
-                Baquero (mickey_migue) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
+                Baquero (<a href=https://twitter.com/mickey_migue"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
             </p>
             <img src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/>
             
