--- a/index.html
+++ b/index.html
@@ -15,62 +15,63 @@
 <body>
     <!--Estilos in line-->
     <!--<header style="color: red; background: blue">-->
-    <header>
+    <header class="header">
         <div>
-            <figure>
+            <figure class="logo">
                 <img src="./images/devlogo.png" alt="logo de la pagina"/>
             </figure>
         </div>
-    <nav>
+    <nav class="menu">
         <ol>
             <li>
-                <a href="#portfolio">Portafolio</a>
+                <a class="link" href="#portfolio">Portafolio</a>
             </li>
             <li>
-                <a href="#experience">Experiencia</a>
+                <a class="link" href="#experience">Experiencia</a>
             </li>
             <li>
-                <a href="#contact">Trabajemos juntos</a>
+                <a class="link" href="#contact">Trabajemos juntos</a>
             </li>
         </ol>
     </nav>    
     </header>
 
-    <section>
+    <section class="hero">
         <h1>
             Hola! Soy Marcos,<br/> <strong> Desarrollador Web</strong> e <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
         </h1>
         <!--Imagenes que tienen que ve r con la portada-->
         <img src="images/hero.jpg" alt="imagen de portada" width="500" height="400"/> 
     </section>
-    <section id="portfolio">
+    <section id="portfolio" class="portfolio">
         <h2>Portafolio (Proyectos Destacados)</h2>
-        <article>
-            <h3>Sistema de pánico con ECU911 y UDLA</h3>
-            <h6>Android</h6>
-            <p><small>Fecha: <strong>01/09/2018</strong></small></p>
-            <p><small>Puedes verlo en: <strong>url</strong></small></p>
-            <p>Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compa;ero de tesis Miguel 
-                Baquero (<a href=https://twitter.com/mickey_migue"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
+        <article class="project">
+            <h3 class="project_title">Sistema de pánico con ECU911 y UDLA</h3>
+            <h6 class="project_course"> Android</h6>
+            <p class="project_date"><small>Fecha: <strong>01/09/2018</strong></small></p>
+            <p class="project_url"><small>Puedes verlo en: <strong>url</strong></small></p>
+            <p class="project_detail">Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compa;ero de tesis Miguel 
+                Baquero (<a href="https://twitter.com/mickey_migue"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
             </p>
-            <img src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/>
-            
-        </article>
-    </section>
-    <section id="experience">
-        <h2>M&aacute;s sobre mi experiencia</h2>
-        <article>
-            <figure>
-                <img src="images/conferencia.jpg" width="500"/>
+            <figure class="proyect_imageWrapper">
+                <img class="proyect_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/>
             </figure>
-            <h3>ICAEET 2019</h3>
-            <p>Evento de nuevas 1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
-            <a href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Participaci&oacute;n</a><br>
-            <a href="http://icaett.snotracg.org/es/inicio/" target="_blank">Informaci&oacute;n del Evento</a>
         </article>
     </section>
-    <section id="contact">
-        <form action="/suscripcion/">
+    <section id="experience" class="experience">
+        <h2>M&aacute;s sobre mi experiencia</h2>
+        <article class="event">
+            <figure class="event_imageWrapper">
+                <img class="event_image" src="images/conferencia.jpg" width="500"/>
+            </figure>
+            <h3 class="event_title">ICAEET 2019</h3>
+            <p class="event_description">Evento de nuevas 1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
+            <a class="event_url" href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Participaci&oacute;n</a><br>
+            <a class="event_url" href="http://icaett.snotracg.org/es/inicio/" target="_blank">Informaci&oacute;n del Evento</a>
+        </article>
+    </section>
+    <section id="contact" class="contact">
+        <form action="/suscripcion/" class="form_email">
             <h3>Creamos algo juntos?</h3>
             <!--<label for="email">Dejame contactarte con mis ideas</label>-->
             <input type="text" id="email" placeholder="Déjame tu email" />
@@ -78,6 +79,6 @@
             <button>Enviar</button>
         </form>
     </section>
-    <footer>Footer</footer>
+    <footer class="footer">footer</footer>
 </body>
 </html>
