Arreglo del favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Hola soy Marcos Gavela!</title>
     <!--Inserción de favicon-->
-    <link rel="icon" type="image/png" href="./iamges/favicon.png"/>
+    <link rel="icon" type="image/png" href="./images/favicon.png"/>
     <link rel="stylesheet" href="css/styles.css">
     <!--<style>
         header {
