Establecimiento de medidas para textos e imagenes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Hola soy Marcos Gavela!</title>
     <!--Inserción de favicon-->
     <link rel="icon" type="image/png" href="./images/favicon.png"/>
+    <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <!--<style>
         header {
@@ -41,28 +42,30 @@
             Hola! Soy Marcos,<br/> <strong> Desarrollador Web</strong> e <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
         </h1>
         <!--Imagenes que tienen que ve r con la portada-->
-        <img src="images/hero.jpg" alt="imagen de portada" width="500" height="400"/> 
+        <!-- <img src="images/hero.jpg" alt="imagen de portada" width="500" height="400"/>  -->
     </section>
     <section id="portfolio" class="portfolio">
         <h2>Portafolio (Proyectos Destacados)</h2>
         <article class="project">
-            <h3 class="project_title">Sistema de pánico con ECU911 y UDLA</h3>
-            <h6 class="project_course"> Android</h6>
-            <p class="project_date"><small>Fecha: <strong>01/09/2018</strong></small></p>
-            <p class="project_url"><small>Puedes verlo en: <strong>url</strong></small></p>
-            <p class="project_detail">Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compa;ero de tesis Miguel 
-                Baquero (<a href="https://twitter.com/mickey_migue"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
-            </p>
-            <figure class="proyect_imageWrapper">
-                <img class="proyect_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/>
-            </figure>
+            <div class="project_details">
+                <h3 class="project_title">Sistema de pánico con ECU911 y UDLA</h3>
+                <h6 class="project_course"> Android</h6>
+                <p class="project_date"><small>Fecha: <strong>01/09/2018</strong></small></p>
+                <p class="project_url"><small>Puedes verlo en: <strong>url</strong></small></p>
+                <p class="project_detail">Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compañero de tesis Miguel 
+                    Baquero (<a href="https://twitter.com/mickey_migue" target="_blank"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
+                </p>
+                <figure class="proyect_imageWrapper">
+                    <img class="proyect_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/>
+                </figure>
+            </div>
         </article>
     </section>
     <section id="experience" class="experience">
         <h2>M&aacute;s sobre mi experiencia</h2>
         <article class="event">
             <figure class="event_imageWrapper">
-                <img class="event_image" src="images/conferencia.jpg" width="500"/>
+                <img class="event_image" src="images/conferencia.jpg" alt="Evento ICAETT" width="500"/>
             </figure>
             <h3 class="event_title">ICAEET 2019</h3>
             <p class="event_description">Evento de nuevas 1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
