Agrego bordes y cambio de background al hero

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!--Imagenes que tienen que ve r con la portada-->
         <!-- <img src="images/hero.jpg" alt="imagen de portada" width="500" height="400"/>  -->
     </section>
-    <section id="portfolio" class="portfolio">
+    <section id="portfolio" class="project">
         <h2>Portafolio (Proyectos Destacados)</h2>
         <article class="project">
             <div class="project_details">
@@ -55,10 +55,10 @@
                 <p class="project_detail">Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compañero de tesis Miguel 
                     Baquero (<a href="https://twitter.com/mickey_migue" target="_blank"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
                 </p>
-                <figure class="proyect_imageWrapper">
-                    <img class="proyect_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/>
-                </figure>
             </div>
+                <figure class="project_imageWrapper">
+                    <img class="project_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/>
+                </figure>
         </article>
     </section>
     <section id="experience" class="experience">
