Insercion de urls para las imagenes y cambios en css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <header class="header">
         <div>
             <figure class="logo">
-                <img src="./images/devlogo.png" alt="logo de la pagina"/>
+                <!-- <img src="./images/devlogo.png" alt="logo de la pagina"/> -->
+                <img src="https://i.imgur.com/0twI50w.png" alt="logo de la pagina"/>
             </figure>
         </div>
     <nav class="menu">
@@ -57,7 +58,8 @@
                 </p>
             </div>
                 <figure class="project_imageWrapper">
-                    <img class="project_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/>
+                    <!-- <img class="project_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/> -->
+                    <img class="project_image" src="https://i.imgur.com/VSGuEra.jpg" alt="Pruebas ECU911" width="500"/>
                 </figure>
         </article>
     </section>
@@ -65,7 +67,8 @@
         <h2>M&aacute;s sobre mi experiencia</h2>
         <article class="event">
             <figure class="event_imageWrapper">
-                <img class="event_image" src="images/conferencia.jpg" alt="Evento ICAETT" width="500"/>
+                <!-- <img class="event_image" src="images/conferencia.jpg" alt="Evento ICAETT" width="500"/> -->
+                <img class="event_image" src="https://i.imgur.com/ffBgqRe.jpg" alt="Evento ICAETT" width="500"/>
             </figure>
             <h3 class="event_title">ICAEET 2019</h3>
             <p class="event_description">Evento de nuevas 1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
