Estilos al Header, Footer, Hero

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
     <!--Estilos in line-->
     <!--<header style="color: red; background: blue">-->
+
     <header class="header">
-        <div>
+        
             <figure class="logo">
                 <!-- <img src="./images/devlogo.png" alt="logo de la pagina"/> -->
-                <img src="https://i.imgur.com/0twI50w.png" alt="logo de la pagina"/>
+                <img src="https://i.imgur.com/0twI50w.png" height="50" alt="logo de la pagina"/>
             </figure>
-        </div>
-    <nav class="menu">
+        <nav class="menu">
         <ol>
             <li>
                 <a class="link" href="#portfolio">Portafolio</a>
@@ -37,7 +37,6 @@
         </ol>
     </nav>    
     </header>
-
     <section class="hero">
         <h1>
             Hola! Soy Marcos,<br/> <strong> Desarrollador Web</strong> e <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
@@ -45,7 +44,7 @@
         <!--Imagenes que tienen que ve r con la portada-->
         <!-- <img src="images/hero.jpg" alt="imagen de portada" width="500" height="400"/>  -->
     </section>
-    <section id="portfolio" class="project">
+    <section id="portfolio" class="projectWrapper">
         <h2>Portafolio (Proyectos Destacados)</h2>
         <article class="project">
             <div class="project_details">
@@ -55,7 +54,7 @@
                 <p class="project_url"><small>Puedes verlo en: <strong>url</strong></small></p>
                 <p class="project_detail">Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compañero de tesis Miguel 
                     Baquero (<a href="https://twitter.com/mickey_migue" target="_blank"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
-                </p>
+                </p>`
             </div>
                 <figure class="project_imageWrapper">
                     <!-- <img class="project_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/> -->
@@ -63,7 +62,7 @@
                 </figure>
         </article>
     </section>
-    <section id="experience" class="experience">
+    <section class="presentation">
         <h2>M&aacute;s sobre mi experiencia</h2>
         <article class="event">
             <figure class="event_imageWrapper">
@@ -85,6 +84,13 @@
             <button>Enviar</button>
         </form>
     </section>
-    <footer class="footer">footer</footer>
+    <footer class="footer">
+        <div>
+            <p>Ejemplo de portafolio de devsetterLab <img src="https://i.imgur.com/l3S7k1v.jpg"  alt="footer pagina"></p>
+        </div>
+        <div>
+            <p>Desarrolado por Marcos Gavela <\3 contactame: <a href="mailto:mgavela194@gmail.cm">contactame</a></p>
+        </div>
+    </footer>
 </body>
 </html>
