Estilos Proyecto, experiencia

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <!--Imagenes que tienen que ve r con la portada-->
         <!-- <img src="images/hero.jpg" alt="imagen de portada" width="500" height="400"/>  -->
     </section>
-    <section id="portfolio" class="projectWrapper">
+    <section id="portfolio" class="portfolio">
         <h2>Portafolio (Proyectos Destacados)</h2>
         <article class="project">
             <div class="project_details">
@@ -61,18 +61,50 @@
                     <img class="project_image" src="https://i.imgur.com/VSGuEra.jpg" alt="Pruebas ECU911" width="500"/>
                 </figure>
         </article>
-    </section>
-    <section class="presentation">
-        <h2>M&aacute;s sobre mi experiencia</h2>
+
+        <article class="project">
+                <div class="project_details">
+                    <h3 class="project_title">Sistema de pánico con ECU911 y UDLA</h3>
+                    <h6 class="project_course"> Android</h6>
+                    <p class="project_date"><small>Fecha: <strong>01/09/2018</strong></small></p>
+                    <p class="project_url"><small>Puedes verlo en: <strong>url</strong></small></p>
+                    <p class="project_detail">Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compañero de tesis Miguel 
+                        Baquero (<a href="https://twitter.com/mickey_migue" target="_blank"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
+                    </p>`
+                </div>
+                    <figure class="project_imageWrapper">
+                        <!-- <img class="project_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/> -->
+                        <img class="project_image" src="https://i.imgur.com/VSGuEra.jpg" alt="Pruebas ECU911" width="500"/>
+                    </figure>
+            </article>
+
+        </section>
+    <h2 class="event_list_title">M&aacute;s sobre mi experiencia</h2>
+    <section class="event_list">
         <article class="event">
+            
             <figure class="event_imageWrapper">
                 <!-- <img class="event_image" src="images/conferencia.jpg" alt="Evento ICAETT" width="500"/> -->
                 <img class="event_image" src="https://i.imgur.com/ffBgqRe.jpg" alt="Evento ICAETT" width="500"/>
             </figure>
+        <div class="event_detail">
             <h3 class="event_title">ICAEET 2019</h3>
-            <p class="event_description">Evento de nuevas 1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
+            <p class="event_description">1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
             <a class="event_url" href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Participaci&oacute;n</a><br>
-            <a class="event_url" href="http://icaett.snotracg.org/es/inicio/" target="_blank">Informaci&oacute;n del Evento</a>
+            <!-- <a class="event_url" href="http://icaett.snotracg.org/es/inicio/" target="_blank">Informaci&oacute;n del Evento</a> -->
+        </div>    
+    </article>
+    <article class="event">
+            <figure class="event_imageWrapper">
+                <!-- <img class="event_image" src="images/conferencia.jpg" alt="Evento ICAETT" width="500"/> -->
+                <img class="event_image" src="https://i.imgur.com/ffBgqRe.jpg" alt="Evento ICAETT" width="500"/>
+            </figure>
+        <div class="event_detail">
+            <h3 class="event_title">ICAEET 2019</h3>
+            <p class="event_description">1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
+            <a class="event_url" href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Participaci&oacute;n</a><br>
+            <!-- <a class="event_url" href="http://icaett.snotracg.org/es/inicio/" target="_blank">Informaci&oacute;n del Evento</a> -->
+        </div>
         </article>
     </section>
     <section id="contact" class="contact">
@@ -89,7 +121,7 @@
             <p>Ejemplo de portafolio de devsetterLab <img src="https://i.imgur.com/l3S7k1v.jpg"  alt="footer pagina"></p>
         </div>
         <div>
-            <p>Desarrolado por Marcos Gavela <\3 contactame: <a href="mailto:mgavela194@gmail.cm">contactame</a></p>
+            <p>Desarrolado por Marcos Gavela <\3 <a href="mailto:mgavela194@gmail.cm">contactame</a></p>
         </div>
     </footer>
 </body>
