--- a/index.html
+++ b/index.html
@@ -18,51 +18,40 @@
     <!--<header style="color: red; background: blue">-->
 
     <header class="header">
-        
+        <div class="container">
             <figure class="logo">
                 <!-- <img src="./images/devlogo.png" alt="logo de la pagina"/> -->
                 <img src="https://i.imgur.com/0twI50w.png" height="50" alt="logo de la pagina"/>
             </figure>
-        <nav class="menu">
-        <ol>
-            <li>
-                <a class="link" href="#portfolio">Portafolio</a>
-            </li>
-            <li>
-                <a class="link" href="#experience">Experiencia</a>
-            </li>
-            <li>
-                <a class="link" href="#contact">Trabajemos juntos</a>
-            </li>
-        </ol>
-    </nav>    
-    </header>
+            <nav class="menu">
+                <ol>
+                    <li>
+                        <a class="link" href="#portfolio">Portafolio</a>
+                    </li>
+                    <li>
+                        <a class="link" href="#experience">Experiencia</a>
+                    </li>
+                    <li>
+                        <a class="link" href="#contact">Trabajemos juntos</a>
+                    </li>
+                </ol>
+            </nav>    
+        </div>        
+        </header>
     <section class="hero">
-        <h1>
-            Hola! Soy Marcos,<br/> <strong> Desarrollador Web</strong> e <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
-        </h1>
-        <!--Imagenes que tienen que ve r con la portada-->
-        <!-- <img src="images/hero.jpg" alt="imagen de portada" width="500" height="400"/>  -->
+        <div class="container">
+            <h1>
+                Hola! Soy Marcos,<br/> <strong> Desarrollador Web</strong> e <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
+            </h1>
+            <!--Imagenes que tienen que ve r con la portada-->
+            <img class="hero-image" src="https://i.imgur.com/MqcfDC3.jpg" alt="imagen de portada" width="500" height="400"/> 
+        </div>
     </section>
     <section id="portfolio" class="portfolio">
-        <h2>Portafolio (Proyectos Destacados)</h2>
-        <article class="project">
-            <div class="project_details">
-                <h3 class="project_title">Sistema de pánico con ECU911 y UDLA</h3>
-                <h6 class="project_course"> Android</h6>
-                <p class="project_date"><small>Fecha: <strong>01/09/2018</strong></small></p>
-                <p class="project_url"><small>Puedes verlo en: <strong>url</strong></small></p>
-                <p class="project_detail">Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compañero de tesis Miguel 
-                    Baquero (<a href="https://twitter.com/mickey_migue" target="_blank"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
-                </p>`
-            </div>
-                <figure class="project_imageWrapper">
-                    <!-- <img class="project_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/> -->
-                    <img class="project_image" src="https://i.imgur.com/VSGuEra.jpg" alt="Pruebas ECU911" width="500"/>
-                </figure>
-        </article>
+        <div class="container">
 
-        <article class="project">
+            <h2>Portafolio (Proyectos Destacados)</h2>
+            <article class="project">
                 <div class="project_details">
                     <h3 class="project_title">Sistema de pánico con ECU911 y UDLA</h3>
                     <h6 class="project_course"> Android</h6>
@@ -72,57 +61,87 @@
                         Baquero (<a href="https://twitter.com/mickey_migue" target="_blank"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
                     </p>`
                 </div>
-                    <figure class="project_imageWrapper">
-                        <!-- <img class="project_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/> -->
-                        <img class="project_image" src="https://i.imgur.com/VSGuEra.jpg" alt="Pruebas ECU911" width="500"/>
-                    </figure>
+                <figure class="project_imageWrapper">
+                    <!-- <img class="project_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/> -->
+                    <img class="project_image" src="https://i.imgur.com/VSGuEra.jpg" alt="Pruebas ECU911" width="500"/>
+                </figure>
             </article>
-
-        </section>
-    <h2 class="event_list_title">M&aacute;s sobre mi experiencia</h2>
-    <section class="event_list">
-        <article class="event">
             
-            <figure class="event_imageWrapper">
-                <!-- <img class="event_image" src="images/conferencia.jpg" alt="Evento ICAETT" width="500"/> -->
-                <img class="event_image" src="https://i.imgur.com/ffBgqRe.jpg" alt="Evento ICAETT" width="500"/>
-            </figure>
-        <div class="event_detail">
-            <h3 class="event_title">ICAEET 2019</h3>
-            <p class="event_description">1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
-            <a class="event_url" href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Participaci&oacute;n</a><br>
-            <!-- <a class="event_url" href="http://icaett.snotracg.org/es/inicio/" target="_blank">Informaci&oacute;n del Evento</a> -->
-        </div>    
-    </article>
-    <article class="event">
-            <figure class="event_imageWrapper">
-                <!-- <img class="event_image" src="images/conferencia.jpg" alt="Evento ICAETT" width="500"/> -->
-                <img class="event_image" src="https://i.imgur.com/ffBgqRe.jpg" alt="Evento ICAETT" width="500"/>
-            </figure>
-        <div class="event_detail">
-            <h3 class="event_title">ICAEET 2019</h3>
-            <p class="event_description">1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
-            <a class="event_url" href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Participaci&oacute;n</a><br>
-            <!-- <a class="event_url" href="http://icaett.snotracg.org/es/inicio/" target="_blank">Informaci&oacute;n del Evento</a> -->
+            <article class="project">
+                <div class="project_details">
+                    <h3 class="project_title">Sistema de pánico con ECU911 y UDLA</h3>
+                    <h6 class="project_course"> Android</h6>
+                    <p class="project_date"><small>Fecha: <strong>01/09/2018</strong></small></p>
+                    <p class="project_url"><small>Puedes verlo en: <strong>url</strong></small></p>
+                    <p class="project_detail">Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compañero de tesis Miguel 
+                        Baquero (<a href="https://twitter.com/mickey_migue" target="_blank"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
+                    </p>`
+                </div>
+                <figure class="project_imageWrapper">
+                    <!-- <img class="project_image" src="images/ECU911.jpg" alt="Pruebas ECU911" width="500"/> -->
+                    <img class="project_image" src="https://i.imgur.com/VSGuEra.jpg" alt="Pruebas ECU911" width="500"/>
+                </figure>
+            </article>
         </div>
-        </article>
+    </section>
+    <div class="container">
+        <h2 class="event_list_title">M&aacute;s sobre mi experiencia</h2>
+    </div>
+    <section id="experience" class="event_list">
+        <div class="container">
+            <article class="event">
+                <figure class="event_imageWrapper">
+                    <!-- <img class="event_image" src="images/conferencia.jpg" alt="Evento ICAETT" width="500"/> -->
+                    <img class="event_image" src="https://i.imgur.com/ffBgqRe.jpg" alt="Evento ICAETT" width="500"/>
+                </figure>
+                <div class="event_detail">
+                    <h3 class="event_title">ICAEET 2019</h3>
+                    <p class="event_description">1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
+                    <a class="event_url" href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Participaci&oacute;n</a><br>
+                    <!-- <a class="event_url" href="http://icaett.snotracg.org/es/inicio/" target="_blank">Informaci&oacute;n del Evento</a> -->
+                </div>    
+            </article>
+            <article class="event">
+                <figure class="event_imageWrapper">
+                    <!-- <img class="event_image" src="images/conferencia.jpg" alt="Evento ICAETT" width="500"/> -->
+                    <img class="event_image" src="https://i.imgur.com/ffBgqRe.jpg" alt="Evento ICAETT" width="500"/>
+                </figure>
+                <div class="event_detail">
+                    <h3 class="event_title">ICAEET 2019</h3>
+                    <p class="event_description">1er Congreso Internacional sobre Avances en Nuevas Tendencias y Tecnolog&iacute;as</p>
+                    <a class="event_url" href="https://tinyurl.com/yyvug4rs" target="_blank">Ver Participaci&oacute;n</a><br>
+                    <!-- <a class="event_url" href="http://icaett.snotracg.org/es/inicio/" target="_blank">Informaci&oacute;n del Evento</a> -->
+                </div>
+            </article>
+        </div>
     </section>
     <section id="contact" class="contact">
-        <form action="/suscripcion/" class="form_email">
-            <h3>Creamos algo juntos?</h3>
-            <!--<label for="email">Dejame contactarte con mis ideas</label>-->
-            <input type="text" id="email" placeholder="Déjame tu email" />
-            <!--<input type="submit" value="Enviar">-->
-            <button>Enviar</button>
-        </form>
-    </section>
+        <div class="container">
+
+            <form action="/suscripcion/" class="form_email">
+                <h3>Creamos algo juntos?</h3>
+                <!--<label for="email">Dejame contactarte con mis ideas</label>-->
+                <input type="text" id="email" placeholder="Déjame tu email" />
+                <!--<input type="submit" value="Enviar">-->
+                <button>Enviar</button>
+            </form>
+            <div class="social">
+                <a href="https://twitter.com/Mark21gvla" target="_blank" class="social_link twitter"></a>
+                <a href="https://www.facebook.com/marcoskeving" target="_blank" class="social_link facebook"></a>
+                <a href="https://github.com/eMKeii" target="_blank" class="social_link github"></a>
+                <a href="https://www.instagram.com/mk21gvla/" target="_blank" class="social_link instagram"></a>
+            </div>
+        </div>
+        </section>
     <footer class="footer">
-        <div>
-            <p>Ejemplo de portafolio de devsetterLab <img src="https://i.imgur.com/l3S7k1v.jpg"  alt="footer pagina"></p>
+        <div class="container">
+            <div>
+                <p>Ejemplo de portafolio de devsetterLab <img src="https://i.imgur.com/l3S7k1v.jpg"  alt="footer pagina"></p>
+            </div>
+            <div>
+                <p>Desarrolado por Marcos Gavela <\3 <a href="mailto:mgavela194@gmail.cm">contactame</a></p>
+            </div>
         </div>
-        <div>
-            <p>Desarrolado por Marcos Gavela <\3 <a href="mailto:mgavela194@gmail.cm">contactame</a></p>
-        </div>
-    </footer>
+        </footer>
 </body>
 </html>
