--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>Hola soy Marcos Gavela!</title>
+    <title>Portafolio de proyectos</title>
     <!--Inserción de favicon-->
     <link rel="icon" type="image/png" href="./images/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
