--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <title>Portafolio de proyectos</title>
     <!--Inserción de favicon-->
     <link rel="icon" type="image/png" href="./images/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--<style>
         header {
             background: green
@@ -117,7 +118,6 @@
     </section>
     <section id="contact" class="contact">
         <div class="container">
-
             <form action="/suscripcion/" class="form_email">
                 <h3>Creamos algo juntos?</h3>
                 <!--<label for="email">Dejame contactarte con mis ideas</label>-->
@@ -142,6 +142,6 @@
                 <p>Desarrolado por Marcos Gavela <\3 <a href="mailto:mgavela194@gmail.cm">contactame</a></p>
             </div>
         </div>
-        </footer>
+    </footer>
 </body>
 </html>
