Establecer MQ para 1024, 768 480 320 px

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <!--Inserción de favicon-->
     <link rel="icon" type="image/png" href="./images/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="css/media.css" media="screen and (max-width:768px)"/> -->
     <link rel="stylesheet" href="css/styles.css">
+    <!-- <style>
+        @media screen and (max-width: 768px){
+            body
+            {
+                border: 10px solid pink;
+            }
+        }
+    </style> -->
+    <!-- Etiqueta usada para darle un escalamiento predeterminado al sitio web -->
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <!--<style>
         header {
@@ -32,7 +42,7 @@
                     <li>
                         <a class="link" href="#experience">Experiencia</a>
                     </li>
-                    <li>
+                    <li>    
                         <a class="link" href="#contact">Trabajemos juntos</a>
                     </li>
                 </ol>
