Responsive section project

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>-->
 </head>
 <body>
-    <!-- <header class="header">
+    <header class="header">
         <div class="container">
             <figure class="logo">
                 <img src="https://i.imgur.com/0twI50w.png" height="50" alt="logo de la pagina"/>
@@ -44,7 +44,7 @@
                 </ol>
             </nav>    
         </div>        
-        </header> -->
+        </header>
     <!-- <section class="hero">
         <div class="container">
             <h1>
@@ -65,7 +65,7 @@
                     <p class="project_url"><small>Puedes verlo en: <strong>url</strong></small></p>
                     <p class="project_detail">Esta aplicaci&oacute;n fue un resultado de 6 meses de trabajo junto con mi compañero de tesis Miguel 
                         Baquero (<a href="https://twitter.com/mickey_migue" target="_blank"> mickey_migue</a>) para el ECU911 con el fin de crear una app para alerta temprano de p&aacute;nico
-                    </p>`
+                    </p>
                 </div>
                 <figure class="project_imageWrapper">
                     <img class="project_image" src="https://i.imgur.com/VSGuEra.jpg" alt="Pruebas ECU911" width="500"/>
