--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </figure>
             </article>
         </div>
-    <!-- </section>
+    </section>
     <div class="container">
         <h2 class="event_list_title">M&aacute;s sobre mi experiencia</h2>
     </div>
@@ -118,7 +118,7 @@
                 </div>
             </article>
         </div>
-    </section> -->
+    </section>
     <!-- <section id="contact" class="contact">
         <div class="container">
             <form action="/suscripcion/" class="form_email">
