Responsive contant, footer. SVG de iconos de socia agregados al proyecto

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </article>
         </div>
     </section>
-    <!-- <section id="contact" class="contact">
+    <section id="contact" class="contact">
         <div class="container">
             <form action="/suscripcion/" class="form_email">
                 <h3>Creamos algo juntos?</h3>
@@ -133,16 +133,16 @@
                 <a href="https://www.instagram.com/mk21gvla/" target="_blank" class="social_link instagram"></a>
             </div>
         </div>
-        </section> -->
-    <!-- <footer class="footer">
+        </section>
+    <footer class="footer">
         <div class="container">
             <div>
                 <p>Ejemplo de portafolio de devsetterLab <img src="https://i.imgur.com/l3S7k1v.jpg"  alt="footer pagina"></p>
             </div>
             <div>
-                <p>Desarrolado por Marcos Gavela <\3 <a href="mailto:mgavela194@gmail.cm">contactame</a></p>
+                <p>Desarrolado con ❤️ por Marcos Gavela  <a href="mailto:mgavela194@gmail.cm">contactame</a></p>
             </div>
         </div>
     </footer>
 </body>
-</html> -->
+</html>
