--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
             </nav>    
         </div>        
         </header>
-    <!-- <section class="hero">
+    <section class="hero">
         <div class="container">
             <h1>
-                Hola! Soy Marcos,<br/> <strong> Desarrollador Web</strong> e <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
+                Hola! Soy <strong>Marcos Gavela</strong> ,<br/> <strong> Desarrollador Web</strong> e <br/> Ingeniero en <strong>Redes y <br/> Telecomunicaciones</strong>
             </h1>
-            <img class="hero-image" src="https://i.imgur.com/MqcfDC3.jpg" alt="imagen de portada" width="500" height="400"/> 
+            <img class="hero_image" src="https://i.imgur.com/DqWE0EO.jpg" alt="imagen de portada" width="500" height="400"/> 
         </div>
-    </section> -->
+    </section>
     <section id="portfolio" class="portfolio">
         <div class="container">
 
@@ -88,6 +88,7 @@
             </article>
         </div>
     </section>
+    <video src="videos/ZZ.mp4" width="1280" height="720" controls></video>
     <div class="container">
         <h2 class="event_list_title">M&aacute;s sobre mi experiencia</h2>
     </div>
