Importacion de icono para menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </style>-->
 </head>
 <body>
+    <i class="icon-menu"></i>
     <header class="header">
         <div class="container">
             <figure class="logo">
@@ -108,7 +109,10 @@
             </article>
             <article class="event">
                 <figure class="event_imageWrapper">
-                   <div class="flexible_video">
+                    <!-- Insertar un video desde una carpeta local -->
+                    <!-- <video class="html_video" src="videos/ZZ.mp4" width="1280" height="720" controls></video> -->
+                    <!-- Insertar un video desde una fuente externa con iframe -->
+                    <div class="flexible_video">
                         <iframe class="youtube_video" width="560" height="315" src="https://www.youtube.com/embed/6UF8kV-jT-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </figure>
