--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </style>-->
 </head>
 <body>
-    <i class="icon-menu"></i>
+    <i class="icon-menu burger_button" id="burger_menu"></i>
     <header class="header">
         <div class="container">
             <figure class="logo">
@@ -150,5 +150,21 @@
             </div>
         </div>
     </footer>
+    <script>
+        console.log('Hola mundo');
+        const menu = document.querySelector('.menu');
+        const burgerButton = document.querySelector('#burger_menu');
+        burgerButton.addEventListener('click', hideShow);
+
+        function hideShow()
+        {
+            if(menu.classList.contains('is_active')){
+                menu.classList.remove('is_active');
+            }else{
+                menu.classList.add('is_active');
+            }
+        }
+
+    </script>
 </body>
 </html>
