Arreglo de bug burgerButton. Padding de portfolio arreglado en 1200px

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <!--Inserción de favicon-->
     <link rel="icon" type="image/png" href="./images/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Fjalla+One|Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <!-- <link rel="stylesheet" href="css/media.css" media="screen and (max-width:768px)"/> -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- <style>
@@ -158,7 +159,9 @@
       // console.log(menu);
       const burgerButton = document.querySelector('#burger_menu');
       // console.log(burgerButton);
+      
       ipad.addListener(validation)
+
       function validation(event) {
         if (event.matches) {
           burgerButton.addEventListener('click', hideShow)
@@ -167,6 +170,7 @@
         }
       }
       validation(ipad);
+      
       function hideShow() {
         if (menu.classList.contains('is_active')) {
           menu.classList.remove('is_active');
